tests/errors/sem1.kt
val x: Int = "Hello" // Type mismatch